[package]
name = "test-runtime"
version = "0.24.0"
edition = "2021"

[dependencies]
subxt = { path = "../../subxt" }
sp-runtime = {version = "6.0.0", git = "https://github.com/analog-labs/substrate.git", default-features = false, branch = "enable-default-keystoreparams"}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[build-dependencies]
subxt = { path = "../../subxt" }
sp-core = { version = "6.0.0", git = "https://github.com/analog-labs/substrate.git", default-features = false, branch = "enable-default-keystoreparams"}
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
which = "4.2.2"
jsonrpsee = { version = "0.15.1", features = ["async-client", "client-ws-transport"] }
